[package]
name = "accessibility-rs"
version = "0.0.46"
authors = ["The A11yWatch Project Developers", "Jeff Mendez <jeff@a11ywatch.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web accessibility engine for Rust."
repository = "https://github.com/a11ywatch/accessibility-rs"
categories = ["accessibility"]
documentation = "https://docs.rs/accessibility-rs"
include = ["/src", "../LICENSE_MIT", "../LICENSE_APACHE", "../README.md", "locales"]

[features]
default = []

[dependencies]
lazy_static = { workspace = true }
accessibility-scraper = { version = "0.0.6", features = ["main"], default-features = false, path = "../accessibility-scraper" }
accessibility-tree = { version = "0.0.6", path = "../accessibility-tree/victor" }
getrandom = { version = "0.2", features = ["js"] }
taffy = { version = "0.3.13" }
serde = { version = "1.0", features = ["derive"] }
selectors = { workspace = true }
smallvec = { workspace = true }
ego-tree = { workspace = true }
markup5ever = "0.11.0"
cssparser = { workspace = true }
slotmap = "1.0.6"
strum = "0.25"
strum_macros = "0.25"
rust-i18n = "2"
contrast = "0.1.0"

[dev-dependencies]
maud = "0.25.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
