[package]
name = "accessibility-rs"
version = "0.0.57"
authors = ["The A11yWatch Project Developers", "Jeff Mendez <jeff@a11ywatch.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web accessibility engine for Rust."
repository = "https://github.com/a11ywatch/accessibility-rs"
categories = ["accessibility"]
documentation = "https://docs.rs/accessibility-rs"
include = ["/src", "../LICENSE_MIT", "../LICENSE_APACHE", "../README.md", "locales"]

[dependencies]
lazy_static = { workspace = true }
accessibility-scraper = { version = "0.0.8", features = ["main"], default-features = false, path = "../accessibility-scraper" }
accessibility-tree = { version = "0.0.8", path = "../accessibility-tree/victor" }
getrandom = { version = "0.2", features = ["js"] }
taffy = { version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
selectors = { workspace = true }
smallvec = { workspace = true }
ego-tree = { workspace = true }
markup5ever = "0.12.0"
cssparser = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
rust-i18n = "2"
contrast = "0.1.0"
rgb = "0.8.37"
rayon = { version = "1.10.0", optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }

[features]
default = []
rayon = ["dep:rayon", "dep:crossbeam-channel"]
rayon_wasm = ["rayon/web_spin_lock"]

[dev-dependencies]
maud = "0.25.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
